# Diplomatic_incident

./: .gitignore  .last_branch  Calculations_Mnist.ipynb  Calculations_cifar10.ipynb  Centralized_cifar10.ipynb  Copy_of_Fed_3_1_mnist.ipynb  Fed_2_mnist.ipynb  Fed_3_1_2_mnist.ipynb  Fed_3_1_cifar10.ipynb  Fed_3_1_mnist.ipynb  Fed_3_2_diabites.ipynb  Fed_3_3_mnist_Non_IID.ipynb  Fed_3_cifar10.ipynb  Fed_3_mnist.ipynb  Fed_4_mnist_Emissions_.ipynb  Fed_5_Diff_Privacy_mnist_.ipynb  Pima Indians Diabetes.pptx  README.md  client.py  dataset.py  emissions.csv  gitmit.sh  help_codes  main.py  model.py  other_datasets_Central_train.ipynb  plot_results.py  pyproject.toml  server.py  test.py  training_Diabites.ipynb  Ταξινόμηση εικόνων του σύνολο δεδομένων Cifar-10.pptx
Privacy/Differential_Privacy/: emissions.csv  environment.yml  pyproject.toml
Privacy/Differential_Privacy/Cifar10_2/: help_text.txt
Privacy/Differential_Privacy/Mnist_2/: help_text.txt
Privacy/Differential_Privacy/opacus_fl/: client_app.py  task.py
Privacy/SecureAggregation/My_Flower_Sa/Mnist_SA/: Test_test.py  pyproject.toml
Privacy/SecureAggregation/My_Flower_Sa/Mnist_SA/Flower_sa/: client_app.py  extra_utils.py  server_app.py  task.py
conf/: base.yaml
conf/model/: net.yaml
conf/optimizer/: Adam.yaml  SGD.yaml
conf/strategy/: fedadam.yaml  fedavg.yaml  my_fedavg.yaml
env/: flower_env.yml
fl_dp_sa/: client_app.py  main.py  server_app.py  task.py
help/: help_codes  help_run
sec_tutorial/: client.py  dataset.py  main.py  model.py  server.py
sec_tutorial/conf/: base.yaml
(+1036 files in other folders)
